@@ -1,0 +1,15 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/selinux-hal-20080525.ebuild,v 1.1 2008/05/25 23:49:40 pebenito Exp $
+
+IUSE=""
+
+MODS="hal dmidecode"
+
+inherit selinux-policy-2
+
+RDEPEND="sec-policy/selinux-dbus"
+
+DESCRIPTION="SELinux policy for desktops"
+
+KEYWORDS="~alpha ~amd64 ~mips ~ppc ~sparc ~x86"
