@@ -1,6 +1,12 @@
 # ChangeLog for sec-policy/selinux-hal
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.6 2008/03/16 04:06:42 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.7 2008/05/25 23:49:40 pebenito Exp $
+
+*selinux-hal-20080525 (25 May 2008)
+
+  25 May 2008; Chris PeBenito <pebenito@gentoo.org>
+  +selinux-hal-20080525.ebuild:
+  New SVN snapshot.
 
   16 Mar 2008; Chris PeBenito <pebenito@gentoo.org>
   -selinux-hal-20061114.ebuild:
